Bug 1413397 - Avoid empty border's fallback. r=kats

MozReview-Commit-ID: 1KXYjcObJdi